--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,16 @@ body {
 }
 
 .signIn{
-  height:40vh;
+  height:100vh;
+  width:100vw;
   display:flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .signInButton{
-  align-self: center;
   height:50px;
   width:100px;
-  margin-left: 46.5vw;
 }
 
 .send{
