--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ main{
 }
 
 .messageSent{
-  margin-right: 50px;
+  margin-right: 3vw;
   display:flex;
   flex-direction:column;
   align-items:flex-end;
@@ -65,7 +65,7 @@ main{
 }
 
 .messageReceived{
-  margin-left: 50px;
+  margin-left: 3vw;
   display:flex;
   flex-direction:column;
   align-items:flex-start;
